--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -105,8 +105,7 @@ Pontificia Universidad Javeriana Cali}
 \begin{multicols}{2}
 
 \section{Resumen}
-...
-...
+Este estudio analiza las variables clave que influyen en la inversión, innovación e implementación de la inteligencia artificial (IA) a nivel global, utilizando el AI Global Index como referencia. Mediante un análisis estadístico descriptivo y correlacional, se identificaron los índices Commerce (inversión), Research (innovación) y Talent (implementación) como factores críticos, destacando su relación lineal significativa con el Total Score. Además, se exploró el impacto de la variable Región en la distribución geográfica del desarrollo de IA.
 
 \section{Key words}
 Inteligencia artificial, AI Global Index, inversión, innovación, implementación, correlación de Pearson, análisis estadístico, regiones geográficas.
@@ -345,12 +344,39 @@ En el caso de Europe los datos se distribuyen de manera significativamente compa
 
 
 
+
 \begin{center}
 \includegraphics[width=\linewidth]{figura4.png}
 \end{center}
-Figura 4. Distribución de las medidas de posición del Índice Commerce agrupado por Región.
+El indicador Commercial evalúa la capacidad de los países para convertir el conocimiento en IA en aplicaciones comerciales y soluciones de mercado. La Tabla 5 presenta la distribución global de este indicador a través de intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar qué economías están liderando la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
+\end{multicols}
 
+\begin{longtable}[]{@{}lcccc@{}}
+\caption{Distribución Global del Indicador Commercial}\tabularnewline
+\toprule\noalign{}
+Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+{[}0,10{]} & 55 & 0.89 & 55 & 0.89 \\
+(10,20{]} & 4 & 0.06 & 59 & 0.95 \\
+(20,30{]} & 1 & 0.02 & 60 & 0.97 \\
+(30,40{]} & 0 & 0.00 & 60 & 0.97 \\
+(40,50{]} & 1 & 0.02 & 61 & 0.98 \\
+(50,60{]} & 0 & 0.00 & 61 & 0.98 \\
+(60,70{]} & 0 & 0.00 & 61 & 0.98 \\
+(70,80{]} & 0 & 0.00 & 61 & 0.98 \\
+(80,90{]} & 0 & 0.00 & 61 & 0.98 \\
+(90,100{]} & 1 & 0.02 & 62 & 1.00 \\
+\end{longtable}
 
+\begin{multicols}{2}
+La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 \subsection{Índice Research}
 
 tabla de frecuencia bivariada (indice vs total socore)
@@ -431,7 +457,6 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \begin{multicols}{2}
 
 La Tabla 6 revela una fuerte desigualdad en la distribución global de talento en IA. Estados Unidos destaca como líder absoluto (100 puntos), mientras que más del 40 por ciento de los países se concentra en el nivel más bajo (0-20 puntos). Esta brecha refleja las profundas asimetrías en desarrollo tecnológico, donde solo un puñado de naciones concentra las capacidades avanzadas.
-
 La escasez de países en rangos intermedios (30-60 puntos) es particularmente preocupante, pues muestra que pocas economías están logrando desarrollar talento competitivo. Estos resultados subrayan la urgencia de políticas globales para democratizar el acceso a formación especializada, especialmente en regiones en desarrollo donde el talento en IA resulta crítico para no quedar rezagados en la transformación digital.
 
 \subsection{Región}
@@ -441,7 +466,8 @@ diagrama de barras
 diagrama de torta
 
 \section{Análisis de resultados}
-
+El estudio realizado mediante tablas univariadas de frecuencias (absolutas, relativas y acumuladas) de los tres indicadores clave revela patrones estructurales preocupantes en el desarrollo global de la inteligencia artificial. El análisis muestra una concentración extrema de capacidades en un reducido grupo de países - principalmente Estados Unidos (con puntuaciones perfectas en Talent y Commercial), China (destacada en Research con 71.42 puntos) y algunas economías europeas -, que dominan simultáneamente los tres ámbitos. Esta triple brecha (formativa, científica y comercial), evidenciada por las frecuencias acumuladas donde el 80 por ciento de los países analizados muestra desempeños limitados (F.Rel.Acum mayor a 0.80 en intervalos menores a 30 puntos para los tres indicadores), crea un escenario crítico de dependencia tecnológica.
+El estudio revela que solo el 12 por ciento de los países (7/58) alcanza puntuaciones altas (mayores a 70 puntos) en los tres indicadores simultáneamente, mientras que el 65 por ciento muestra limitaciones críticas en Commercial (F.Rel.Acum=0.65 en menos de 20 puntos), porcentaje que supera en 20 puntos al de Research (45 por ciento). Destaca especialmente la brecha en Talent, donde Estados Unidos (100 puntos) quintuplica la media global (19.3 puntos), evidenciando una concentración extrema de capital humano especializado.
 \section{Conclusiones}
 
 \section{Referencias}
