--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -274,7 +274,7 @@ Hay un dato con un Índice Commerce entre 40 y 50 con un total score correspondi
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Wed Apr 16 18:53:52 2025
+% Wed Apr 16 19:11:26 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Commerce (A) vs Total Score (B)} \\ 
   \hline
@@ -350,13 +350,13 @@ El indicador Commercial evalúa la capacidad de los países para convertir el co
 \end{multicols}
 
 \begin{longtable}[]{@{}lcccc@{}}
-\caption{Frecuencia del Indicador Commerce}\tabularnewline
+\caption{Frecuencia del Índice Commercial}\tabularnewline
 \toprule\noalign{}
-Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \midrule\noalign{}
 \endfirsthead
 \toprule\noalign{}
-Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
@@ -392,11 +392,11 @@ El indicador *Research* mide la producción científica y capacidad investigador
 \begin{longtable}[]{@{}lcccc@{}}
 \caption{Frecuencia del Índice Research}\tabularnewline
 \toprule\noalign{}
-Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \midrule\noalign{}
 \endfirsthead
 \toprule\noalign{}
-Intervalo & F.Abs & F.Rel & F.Abs.A & F.Rel.A \\
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
