--- a/avance2-proyecto.Rmd
+++ b/avance2-proyecto.Rmd
@@ -120,8 +120,35 @@ ggsave("figura1.png", plot = figura1, width = 7, height = 7, dpi = 300)
 \end{center}
 Figura 1. Correlación lineal de Pearson índices.
 
-Posteriormente, se realizó ... 
-... para cada uno de los índices con el fin de ...
+\section*{Población y Muestra} % Using \section* for unnumbered sections
+La población considerada para este estudio corresponde a los países y regiones incluidas en el AI Global Index.
+La muestra se delimita a aquellos países con datos completos para las variables de interés:
+inversión, infraestructura, talento, ambiente operativo e investigación y desarrollo.
+Se seleccionaron X países según los criterios establecidos en la Figura 1, priorizando la disponibilidad
+de datos confiables y actualizados.
+
+\section*{Unidad de Análisis}
+La unidad de análisis en este estudio es cada país individual, evaluado según las variables cuantitativas y cualitativas
+definidas en la Tabla 1.
+
+\section*{Criterios de Selección}
+Los criterios considerados para la selección de los países y regiones incluyen:
+\begin{enumerate}
+    \item Disponibilidad de datos en el AI Global Index.
+    \item Inclusión en las categorías de clasificación establecidas (ver Tabla 1).
+    \item Representación geográfica equilibrada para evitar sesgos regionales.
+\end{enumerate}
+
+\section*{Tipo de Análisis}
+El análisis realizado incluye:
+\begin{itemize}
+    \item Estadísticas descriptivas: medidas de tendencia central, dispersión y posición.
+    \item Correlación lineal de Pearson entre las variables cuantitativas y el índice total.
+    \item Comparación de medias para evaluar diferencias significativas entre subgrupos de países (por ejemplo, según ingresos).
+\end{itemize}
+
+Posteriormente, se emplearon métodos de análisis multivariado para explorar relaciones más complejas entre las variables,
+como el análisis de componentes principales (ACP) para identificar patrones latentes en los datos.
 
 \section{Resultados}
 En la Tabla 2 se presentan las medidas de tendencia central y posición de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
