--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -165,8 +165,35 @@ Posteriormente, con el propósito de indentificar las posibles variables con un 
 \end{center}
 Figura 1. Correlación lineal de Pearson índices.
 
-Posteriormente, se realizó ... 
-... para cada uno de los índices con el fin de ...
+\section*{Población y Muestra} % Using \section* for unnumbered sections
+La población considerada para este estudio corresponde a los países y regiones incluidas en el AI Global Index.
+La muestra se delimita a aquellos países con datos completos para las variables de interés:
+inversión, infraestructura, talento, ambiente operativo e investigación y desarrollo.
+Se seleccionaron X países según los criterios establecidos en la Figura 1, priorizando la disponibilidad
+de datos confiables y actualizados.
+
+\section*{Unidad de Análisis}
+La unidad de análisis en este estudio es cada país individual, evaluado según las variables cuantitativas y cualitativas
+definidas en la Tabla 1.
+
+\section*{Criterios de Selección}
+Los criterios considerados para la selección de los países y regiones incluyen:
+\begin{enumerate}
+    \item Disponibilidad de datos en el AI Global Index.
+    \item Inclusión en las categorías de clasificación establecidas (ver Tabla 1).
+    \item Representación geográfica equilibrada para evitar sesgos regionales.
+\end{enumerate}
+
+\section*{Tipo de Análisis}
+El análisis realizado incluye:
+\begin{itemize}
+    \item Estadísticas descriptivas: medidas de tendencia central, dispersión y posición.
+    \item Correlación lineal de Pearson entre las variables cuantitativas y el índice total.
+    \item Comparación de medias para evaluar diferencias significativas entre subgrupos de países (por ejemplo, según ingresos).
+\end{itemize}
+
+Posteriormente, se emplearon métodos de análisis multivariado para explorar relaciones más complejas entre las variables,
+como el análisis de componentes principales (ACP) para identificar patrones latentes en los datos.
 
 \section{Resultados}
 En la Tabla 2 se presentan las medidas de tendencia central y posición de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
@@ -274,7 +301,7 @@ Hay un dato con un Índice Commerce entre 40 y 50 con un total score correspondi
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Wed Apr 16 20:06:49 2025
+% Wed Apr 16 20:42:52 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Commerce (A) vs Total Score (B)} \\ 
   \hline
@@ -375,17 +402,11 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 
 \begin{multicols}{2}
 
-La Tabla 6 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
-
 \subsection{Índice Research}
 
-tabla de frecuencia bivariada (indice vs total socore)
-histograma x region
-ojiva x region
-diagrama de cajas y bigotes x region
-
-
 El indicador *Research* mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 5 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
+
+La Tabla 6 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 
 \end{multicols}
 
@@ -467,7 +488,9 @@ El diagrama de torta de distribución regional proporciona el contexto geopolít
 
 \section{Análisis de resultados}
 El estudio realizado mediante tablas univariadas de frecuencias (absolutas, relativas y acumuladas) de los tres indicadores clave revela patrones estructurales preocupantes en el desarrollo global de la inteligencia artificial. El análisis muestra una concentración extrema de capacidades en un reducido grupo de países - principalmente Estados Unidos (con puntuaciones perfectas en Talent y Commercial), China (destacada en Research con 71.42 puntos) y algunas economías europeas -, que dominan simultáneamente los tres ámbitos. Esta triple brecha (formativa, científica y comercial), evidenciada por las frecuencias acumuladas donde el 80 por ciento de los países analizados muestra desempeños limitados (F.Rel.Acum mayor a 0.80 en intervalos menores a 30 puntos para los tres indicadores), crea un escenario crítico de dependencia tecnológica.
-El estudio revela que solo el 12 por ciento de los países (7/58) alcanza puntuaciones altas (mayores a 70 puntos) en los tres indicadores simultáneamente, mientras que el 65 por ciento muestra limitaciones críticas en Commercial (F.Rel.Acum=0.65 en menos de 20 puntos), porcentaje que supera en 20 puntos al de Research (45 por ciento). Destaca especialmente la brecha en Talent, donde Estados Unidos (100 puntos) quintuplica la media global (19.3 puntos), evidenciando una concentración extrema de capital humano especializado.
+
+El estudio revela que solo el 12\% de los países (7/58) alcanza puntuaciones altas (mayores a 70 puntos) en los tres indicadores simultáneamente, mientras que el 65\% muestra limitaciones críticas en el Índice Commerce (F.Rel.Acum=0.65 en menos de 20 puntos), porcentaje que supera en 20 puntos al de Research (45\%). Destaca especialmente la brecha en Talent, donde Estados Unidos (100 puntos) quintuplica la media global (19.3 puntos), evidenciando una concentración extrema de capital humano especializado.
+
 \section{Conclusiones}
 
 \section{Referencias}
