--- a/avance2-proyecto.Rmd
+++ b/avance2-proyecto.Rmd
@@ -556,7 +556,7 @@ knitr::kable(tabla_frecuencias_commercial,
 
 \subsection{Índice Research}
 
-El indicador *Research* mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 5 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
+El indicador Research mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 5 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
 
 La Tabla 6 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 
@@ -644,7 +644,7 @@ La escasez de países en rangos intermedios (30-60 puntos) es particularmente pr
 El diagrama de torta de distribución regional proporciona el contexto geopolítico esencial para interpretar las desigualdades en los indicadores de IA (Talent-Research-Commercial), revelando que la excelencia tecnológica no se distribuye aleatoriamente, sino que se concentra en regiones con ventajas históricas de inversión en educación e innovación. Esta visualización evidencia cómo la mayor representación proporcional de ciertas zonas (como América del Norte y Asia-Pacífico) correlaciona directamente con su dominio en los intervalos superiores de los tres indicadores, mientras que regiones con menor representación proporcional (África, Latinoamérica) aparecen sistemáticamente en los rangos inferiores, configurando un mapa de dependencia tecnológica global
 
 \includegraphics[width=\linewidth]{Efrain(torta).png}
-Figura 4. Distribución porcentual por Región.
+
 
 \section{Análisis de resultados}
 El estudio realizado mediante tablas univariadas de frecuencias (absolutas, relativas y acumuladas) de los tres indicadores clave revela patrones estructurales preocupantes en el desarrollo global de la inteligencia artificial. El análisis muestra una concentración extrema de capacidades en un reducido grupo de países - principalmente Estados Unidos (con puntuaciones perfectas en Talent y Commercial), China (destacada en Research con 71.42 puntos) y algunas economías europeas -, que dominan simultáneamente los tres ámbitos. Esta triple brecha (formativa, científica y comercial), evidenciada por las frecuencias acumuladas donde el 80 por ciento de los países analizados muestra desempeños limitados (F.Rel.Acum mayor a 0.80 en intervalos menores a 30 puntos para los tres indicadores), crea un escenario crítico de dependencia tecnológica.
